# moonai

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  GEMINI.md  README.md  ROADMAP.md  TODO.md  config.lua  flake.nix  index.html  justfile  moonai.html  plan-ecs-migration.md  plan-gpu.md  profiler.lua  styles.css  zensical.toml
.github/workflows/: cuda.yml  pages.yml
analysis/: analyze_genome.py  cli.py  compare_experiments.py  plot_complexity.py  plot_fitness.py  plot_population.py  plot_species.py  report.py
analysis/moonai_analysis/: genome.py  io.py  plots.py
conductor/: product-guidelines.md  product.md  project_notes.md  tech-stack.md  tech_used_draft.html
config/: default_config.json
docs/: about.md  index.md  usage.md
docs/lld/: main.tex
profiler/: __main__.py
profiler_analysis/: pyproject.toml
profiler_analysis/moonai_profile_analysis/: __init__.py  __main__.py  io.py  pipeline.py  plots.py
profiler_analysis/moonai_profile_analysis/templates/: report.html.j2
site/: 404.html  index.html  search.json
src/: app.cpp  app.hpp  main.cpp  profiler_main.cpp
src/core/: CMakeLists.txt  app_state.cpp  app_state.hpp  config.cpp  config.hpp  lua_runtime.cpp  lua_runtime.hpp  profiler.cpp  profiler.hpp  profiler_macros.hpp  profiler_types.hpp  random.hpp  types.hpp
tests/: CMakeLists.txt  test_config.cpp  test_ecs.cpp  test_ecs_gpu_packing.cpp  test_evolution.cpp  test_gpu.cpp  test_logger.cpp  test_profiler.cpp  test_random.cpp  test_simulation.cpp  test_simulation_sensors.cpp
web/: index.html  script.js  styles.css
(+144 files in other folders)
