[project]
name = "moonai-profile-analysis"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "jinja2>=3.1",
]

[project.scripts]
moonai-profile-analysis = "moonai_profile_analysis.__main__:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"
